syntax = "proto3";

package gateway;

option go_package = "./proto";

service GatewayService {
  rpc HandleRequest(GatewayRequest) returns (GatewayResponse);
}

message GatewayRequest {
  string height = 1;
}

message GatewayResponse {
  string message = 1;
}
